@@ -38,9 +38,6 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TreeMap;
 
-import javolution.util.FastList;
-import javolution.util.FastMap;
-
 import org.ofbiz.base.util.Debug;
 import org.ofbiz.base.util.GeneralException;
 import org.ofbiz.base.util.GeneralRuntimeException;
@@ -81,7 +78,7 @@ import org.ofbiz.service.ServiceUtil;
 @SuppressWarnings("serial")
 public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
-    public static final String module = ShoppingCart.class.getName();
+    private static final Debug.OfbizLogger module = Debug.getOfbizLogger(java.lang.invoke.MethodHandles.lookup().lookupClass());
     public static final String resource_error = "OrderErrorUiLabels";
 
     // modes for getting OrderItemAttributes
@@ -129,22 +126,22 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     private String autoSaveListId = null;
 
     /** Holds value of order adjustments. */
-    private List<GenericValue> adjustments = FastList.newInstance();
+    private List<GenericValue> adjustments = new LinkedList<GenericValue>();
     // OrderTerms
     private boolean orderTermSet = false;
     private List<GenericValue> orderTerms = new LinkedList<GenericValue>();
 
-    private List<ShoppingCartItem> cartLines = FastList.newInstance();
-    private Map<String, ShoppingCartItemGroup> itemGroupByNumberMap = FastMap.newInstance();
+    private List<ShoppingCartItem> cartLines = new LinkedList<ShoppingCartItem>();
+    private Map<String, ShoppingCartItemGroup> itemGroupByNumberMap = new HashMap<String, ShoppingCartItemGroup>();
     protected long nextGroupNumber = 1;
-    private List<CartPaymentInfo> paymentInfo = FastList.newInstance();
-    private List<CartShipInfo> shipInfo = FastList.<CartShipInfo> newInstance();
+    private List<CartPaymentInfo> paymentInfo = new LinkedList<CartPaymentInfo>();
+    private List<CartShipInfo> shipInfo = new LinkedList<CartShipInfo>();
     private Map<String, String> contactMechIdsMap = new HashMap<String, String>();
-    private Map<String, String> orderAttributes = FastMap.newInstance();
-    private Map<String, Object> attributes = FastMap.newInstance(); // user defined attributes
+    private Map<String, String> orderAttributes = new HashMap<String, String>();
+    private Map<String, Object> attributes = new HashMap<String, Object>(); // user defined attributes
     // Lists of internal/public notes: when the order is stored they are transformed into OrderHeaderNotes
-    private List<String> internalOrderNotes = FastList.newInstance(); // internal notes
-    private List<String> orderNotes = FastList.newInstance(); // public notes (printed on documents etc.)
+    private List<String> internalOrderNotes = new LinkedList<String>(); // internal notes
+    private List<String> orderNotes = new LinkedList<String>(); // public notes (printed on documents etc.)
 
     /** contains a list of partyId for each roleTypeId (key) */
     private Map<String, List<String>> additionalPartyRole = new HashMap<String, List<String>>();
@@ -154,7 +151,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     private Timestamp defaultShipBeforeDate = null;
 
     /** Contains a List for each productPromoId (key) containing a productPromoCodeId (or empty string for no code) for each use of the productPromoId */
-    private List<ProductPromoUseInfo> productPromoUseInfoList = FastList.newInstance();
+    private List<ProductPromoUseInfo> productPromoUseInfoList = new LinkedList<ProductPromoUseInfo>();
     /** Contains the promo codes entered */
     private Set<String> productPromoCodes = new HashSet<String>();
     private List<GenericValue> freeShippingProductPromoActions = new ArrayList<GenericValue>();
@@ -195,6 +192,9 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     protected boolean holdOrder = false;
     protected Timestamp orderDate = null;
     protected Timestamp cancelBackOrderDate = null;
+    
+    // SCIPIO: Cart item subscriptions 
+    protected Map<String, List<GenericValue>> cartSubscriptionItems = null;
 
     /** don't allow empty constructor */
     protected ShoppingCart() {}
@@ -265,7 +265,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         this.productStoreId = productStoreId;
         this.webSiteId = webSiteId;
         this.locale = (locale != null) ? locale : Locale.getDefault();
-        this.currencyUom = (currencyUom != null) ? currencyUom : EntityUtilProperties.getPropertyValue("general.properties", "currency.uom.id.default", "USD", delegator);
+        this.currencyUom = (currencyUom != null) ? currencyUom : EntityUtilProperties.getPropertyValue("general", "currency.uom.id.default", "USD", delegator);
         this.billToCustomerPartyId = billToCustomerPartyId;
         this.billFromVendorPartyId = billFromVendorPartyId;
 
@@ -730,7 +730,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     public List<ShoppingCartItem> findAllCartItems(String productId, String groupNumber) {
         if (productId == null) return this.items();
 
-        List<ShoppingCartItem> itemsToReturn = FastList.newInstance();
+        List<ShoppingCartItem> itemsToReturn = new LinkedList<ShoppingCartItem>();
         // Check for existing cart item.
         for (ShoppingCartItem cartItem : cartLines) {
             if (UtilValidate.isNotEmpty(groupNumber) && !cartItem.isInItemGroup(groupNumber)) {
@@ -748,7 +748,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         if (productCategoryId == null) return this.items();
 
         Delegator delegator = this.getDelegator();
-        List<ShoppingCartItem> itemsToReturn = FastList.newInstance();
+        List<ShoppingCartItem> itemsToReturn = new LinkedList<ShoppingCartItem>();
         try {
             // Check for existing cart item
             for (ShoppingCartItem cartItem : cartLines) {
@@ -792,7 +792,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         if (multipleItems.size() <= maxItems) return;
 
         // remove all except first <maxItems> in list from the cart, first because new cart items are added to the beginning...
-        List<ShoppingCartItem> localList = FastList.newInstance();
+        List<ShoppingCartItem> localList = new LinkedList<ShoppingCartItem>();
         localList.addAll(multipleItems);
         // the ones to keep...
         for (int i=0; i<maxItems; i++) localList.remove(0);
@@ -810,7 +810,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public static List<GenericValue> getItemsProducts(List<ShoppingCartItem> cartItems) {
-        List<GenericValue> productList = FastList.newInstance();
+        List<GenericValue> productList = new LinkedList<GenericValue>();
         for (ShoppingCartItem item : cartItems) {
             GenericValue product = item.getProduct();
             if (product != null) {
@@ -970,7 +970,16 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         }
         if (index < 0) return;
         if (cartLines.size() <= index) return;
-        ShoppingCartItem item = cartLines.remove(index);
+        // SCIPIO: Removing cart item from subscriptions map, if exists
+        ShoppingCartItem item = cartLines.get(index);
+        String prodId = item.getProductId();
+        if (UtilValidate.isNotEmpty(cartSubscriptionItems) 
+                && UtilValidate.isNotEmpty(prodId) 
+                && cartSubscriptionItems.containsKey(prodId)) {
+            cartSubscriptionItems.remove(prodId);
+        }
+        item = cartLines.remove(index);
+        
 
         // set quantity to 0 to trigger necessary events, but skip price calc and inventory checks
         item.setQuantity(BigDecimal.ZERO, dispatcher, this, triggerExternalOps, true, false, true);
@@ -1001,7 +1010,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
     /** Returns a Collection of items in the cart object. */
     public List<ShoppingCartItem> items() {
-        List<ShoppingCartItem> result = FastList.newInstance();
+        List<ShoppingCartItem> result = new LinkedList<ShoppingCartItem>();
         result.addAll(cartLines);
         return result;
     }
@@ -1045,7 +1054,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public List<ShoppingCartItem> getCartItemsInNoGroup() {
-        List<ShoppingCartItem> cartItemList = FastList.newInstance();
+        List<ShoppingCartItem> cartItemList = new LinkedList<ShoppingCartItem>();
         for (ShoppingCartItem cartItem : cartLines) {
             if (cartItem.getItemGroup() == null) {
                 cartItemList.add(cartItem);
@@ -1055,7 +1064,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public List<ShoppingCartItem> getCartItemsInGroup(String groupNumber) {
-        List<ShoppingCartItem> cartItemList = FastList.newInstance();
+        List<ShoppingCartItem> cartItemList = new LinkedList<ShoppingCartItem>();
         ShoppingCart.ShoppingCartItemGroup itemGroup = this.getItemGroupByNumber(groupNumber);
         if (itemGroup != null) {
             for (ShoppingCartItem cartItem : cartLines) {
@@ -1455,6 +1464,10 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         this.desiredAlternateGiftByAction.clear();
         this.productPromoUseInfoList.clear();
         this.productPromoCodes.clear();
+        
+        // SCIPIO: Clearing subscription items
+        if (this.cartSubscriptionItems != null)
+            this.cartSubscriptionItems.clear();
 
         // clear the auto-save info
         if (ProductStoreWorker.autoSaveCart(this.getDelegator(), this.getProductStoreId())) {
@@ -1887,7 +1900,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
     /** Returns the Payment Method Ids */
     public List<String> getPaymentMethodTypeIds() {
-        List<String> pmt = FastList.newInstance();
+        List<String> pmt = new LinkedList<String>();
         for (CartPaymentInfo inf : paymentInfo) {
             if (inf.paymentMethodTypeId != null) {
                 pmt.add(inf.paymentMethodTypeId);
@@ -1898,7 +1911,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     
     /** SCIPIO: Returns the Payment Method Ids that have no paymentMethodIds */
     public List<String> getPaymentMethodTypeIdsNoPaymentMethodIds() {
-        List<String> pmt = FastList.newInstance();
+        List<String> pmt = new LinkedList<String>();
         for (CartPaymentInfo inf : paymentInfo) {
             if (inf.paymentMethodId == null && inf.paymentMethodTypeId != null) {
                 pmt.add(inf.paymentMethodTypeId);
@@ -1909,7 +1922,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
     /** Returns a list of PaymentMethod value objects selected in the cart */
     public List<GenericValue> getPaymentMethods() {
-        List<GenericValue> methods = FastList.newInstance();
+        List<GenericValue> methods = new LinkedList<GenericValue>();
         if (UtilValidate.isNotEmpty(paymentInfo)) {
             for (String paymentMethodId : getPaymentMethodIds()) {
                 try {
@@ -2151,7 +2164,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     /** Returns the ShoppingCartItem (key) and quantity (value) associated with the ship group */
     public Map<ShoppingCartItem, BigDecimal> getShipGroupItems(int idx) {
         CartShipInfo csi = this.getShipInfo(idx);
-        Map<ShoppingCartItem, BigDecimal> qtyMap = FastMap.newInstance();
+        Map<ShoppingCartItem, BigDecimal> qtyMap = new HashMap<ShoppingCartItem, BigDecimal>();
         for (ShoppingCartItem item : csi.shipItemInfo.keySet()) {
             CartShipInfo.CartShipItemInfo csii = csi.shipItemInfo.get(item);
             qtyMap.put(item, csii.quantity);
@@ -2839,7 +2852,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
     public BigDecimal getOrderGlobalAdjustments() {
         List cartAdjustments = this.getAdjustments();
-        List tempAdjustmentsList = FastList.newInstance();
+        List tempAdjustmentsList = new LinkedList();
         if (cartAdjustments != null) {
             Iterator<GenericValue> cartAdjustmentIter = cartAdjustments.iterator();
             while (cartAdjustmentIter.hasNext()) {
@@ -3061,7 +3074,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         if (orderAdjustmentTypeId == null) return;
 
         // make a list of adjustment lists including the cart adjustments and the cartItem adjustments for each item
-        List<List<GenericValue>> adjsLists = FastList.newInstance();
+        List<List<GenericValue>> adjsLists = new LinkedList<List<GenericValue>>();
 
         adjsLists.add(this.getAdjustments());
 
@@ -3161,7 +3174,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     /** Returns a List of shippable item's size for a specific ship group. */
     public List<BigDecimal> getShippableSizes(int idx) {
         CartShipInfo info = this.getShipInfo(idx);
-        List<BigDecimal> shippableSizes = FastList.newInstance();
+        List<BigDecimal> shippableSizes = new LinkedList<BigDecimal>();
 
         for (ShoppingCartItem item : info.shipItemInfo.keySet()) {
             CartShipInfo.CartShipItemInfo csii = info.shipItemInfo.get(item);
@@ -3178,7 +3191,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     /** Returns a List of shippable item info (quantity, size, weight) for a specific ship group */
     public List<Map<String, Object>> getShippableItemInfo(int idx) {
         CartShipInfo info = this.getShipInfo(idx);
-        List<Map<String, Object>> itemInfos = FastList.newInstance();
+        List<Map<String, Object>> itemInfos = new LinkedList<Map<String, Object>>();
 
         for (ShoppingCartItem item : info.shipItemInfo.keySet()) {
             CartShipInfo.CartShipItemInfo csii = info.shipItemInfo.get(item);
@@ -3221,7 +3234,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     /** Returns a Map of all features applied to products in the cart with quantities for a specific ship group. */
     public Map<String, BigDecimal> getFeatureIdQtyMap(int idx) {
         CartShipInfo info = this.getShipInfo(idx);
-        Map<String, BigDecimal> featureMap = FastMap.newInstance();
+        Map<String, BigDecimal> featureMap = new HashMap<String, BigDecimal>();
 
         for (ShoppingCartItem item : info.shipItemInfo.keySet()) {
             CartShipInfo.CartShipItemInfo csii = info.shipItemInfo.get(item);
@@ -3666,7 +3679,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public List<GenericValue> makeOrderItemGroups() {
-        List<GenericValue> result = FastList.newInstance();
+        List<GenericValue> result = new LinkedList<GenericValue>();
         for (ShoppingCart.ShoppingCartItemGroup itemGroup : this.itemGroupByNumberMap.values()) {
             result.add(itemGroup.makeOrderItemGroup(this.getDelegator()));
         }
@@ -3741,7 +3754,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
         // now build the lines
         synchronized (cartLines) {
-            List<GenericValue> result = FastList.newInstance();
+            List<GenericValue> result = new LinkedList<GenericValue>();
 
             for (ShoppingCartItem item : cartLines) {
                 if (UtilValidate.isEmpty(item.getOrderItemSeqId())) {
@@ -3840,7 +3853,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
     /** make a list of all adjustments including order adjustments, order line adjustments, and special adjustments (shipping and tax if applicable) */
     public List<GenericValue> makeAllAdjustments() {
-        List<GenericValue> allAdjs = FastList.newInstance();
+        List<GenericValue> allAdjs = new LinkedList<GenericValue>();
 
         // before returning adjustments, go through them to find all that need counter adjustments (for instance: free shipping)
         for (GenericValue orderAdjustment: this.getAdjustments()) {
@@ -3928,7 +3941,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
      *  Internally, the quote adjustments are created from the order adjustments.
      */
     public List<GenericValue> makeAllQuoteAdjustments() {
-        List<GenericValue> quoteAdjs = FastList.newInstance();
+        List<GenericValue> quoteAdjs = new LinkedList<GenericValue>();
 
         for (GenericValue orderAdj: makeAllAdjustments()) {
             GenericValue quoteAdj = this.getDelegator().makeValue("QuoteAdjustment");
@@ -4010,7 +4023,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public List<GenericValue> makeProductPromoUses() {
-        List<GenericValue> productPromoUses = FastList.newInstance();
+        List<GenericValue> productPromoUses = new LinkedList<GenericValue>();
         String partyId = this.getPartyId();
         int sequenceValue = 0;
         for (ProductPromoUseInfo productPromoUseInfo: this.productPromoUseInfoList) {
@@ -4125,7 +4138,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
         // now build order item attributes
         synchronized (cartLines) {
-            List<GenericValue> result = FastList.newInstance();
+            List<GenericValue> result = new LinkedList<GenericValue>();
 
             for (ShoppingCartItem item : cartLines) {
                 Map<String, String> orderItemAttributes = item.getOrderItemAttributes();
@@ -4158,7 +4171,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
 
     public List<GenericValue> makeAllOrderAttributes(String orderId, int mode) {
 
-        List<GenericValue> allOrderAttributes = FastList.newInstance();
+        List<GenericValue> allOrderAttributes = new LinkedList<GenericValue>();
 
         for (Map.Entry<String, String> entry: orderAttributes.entrySet()) {
             GenericValue orderAtt = this.getDelegator().makeValue("OrderAttribute");
@@ -4597,8 +4610,8 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
     }
 
     public static class CartShipInfo implements Serializable {
-        public Map<ShoppingCartItem, CartShipItemInfo> shipItemInfo = FastMap.newInstance();
-        public List<GenericValue> shipTaxAdj = FastList.newInstance();
+        public Map<ShoppingCartItem, CartShipItemInfo> shipItemInfo = new HashMap<ShoppingCartItem, CartShipItemInfo>();
+        public List<GenericValue> shipTaxAdj = new LinkedList<GenericValue>();
         public String orderTypeId = null;
         private String internalContactMechId = null;
         public String telecomContactMechId = null;
@@ -4618,7 +4631,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         private String associatedShipGroupSeqId = null;
         public String vendorPartyId = null;
         public String productStoreShipMethId = null;
-        public Map<String, Object> attributes = FastMap.newInstance();
+        public Map<String, Object> attributes = new HashMap<String, Object>();
 
         public void setAttribute(String name, Object value) {
             this.attributes.put(name, value);
@@ -4724,7 +4737,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
             values.add(shipGroup);
 
             //set estimated ship dates
-            FastList<Timestamp> estimatedShipDates = FastList.newInstance();
+            List<Timestamp> estimatedShipDates = new LinkedList<Timestamp>();
             for (ShoppingCartItem item : shipItemInfo.keySet()) {
                 Timestamp estimatedShipDate = item.getEstimatedShipDate();
                 if (estimatedShipDate != null) {
@@ -4733,12 +4746,12 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
             }
             if (estimatedShipDates.size() > 0) {
                 Collections.sort(estimatedShipDates);
-                Timestamp estimatedShipDate  = estimatedShipDates.getLast();
+                Timestamp estimatedShipDate  = estimatedShipDates.get(estimatedShipDates.size() - 1);
                 shipGroup.set("estimatedShipDate", estimatedShipDate);
             }
 
             //set estimated delivery dates
-            FastList<Timestamp> estimatedDeliveryDates = FastList.newInstance();
+            List<Timestamp> estimatedDeliveryDates = new LinkedList<Timestamp>();
             for (ShoppingCartItem item : shipItemInfo.keySet()) {
                 Timestamp estimatedDeliveryDate = item.getDesiredDeliveryDate();
                 if (estimatedDeliveryDate != null) {
@@ -4747,7 +4760,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
             }
             if (UtilValidate.isNotEmpty(estimatedDeliveryDates)) {
                 Collections.sort(estimatedDeliveryDates);
-                Timestamp estimatedDeliveryDate = estimatedDeliveryDates.getLast();
+                Timestamp estimatedDeliveryDate = estimatedDeliveryDates.get(estimatedDeliveryDates.size() - 1);
                 shipGroup.set("estimatedDeliveryDate", estimatedDeliveryDate);
             }
 
@@ -4868,7 +4881,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         }
 
         public BigDecimal getTotalTax(ShoppingCart cart) {
-            List<GenericValue> taxAdjustments = FastList.newInstance();
+            List<GenericValue> taxAdjustments = new LinkedList<GenericValue>();
             taxAdjustments.addAll(shipTaxAdj);
             for (CartShipItemInfo info : shipItemInfo.values()) {
                 taxAdjustments.addAll(info.itemTaxAdj);
@@ -4880,7 +4893,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
         
         /**SCIPIO: Added VAT Tax calculation*/
         public BigDecimal getTotalVATTax(ShoppingCart cart){
-            List<GenericValue> taxAdjustments = FastList.newInstance();
+            List<GenericValue> taxAdjustments = new LinkedList<GenericValue>();
             taxAdjustments.addAll(shipTaxAdj);
             for (CartShipItemInfo info : shipItemInfo.values()) {
                 taxAdjustments.addAll(info.itemTaxAdj);
@@ -5245,7 +5258,7 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
                                                       .where("productId", itemProductId)
                                                       .filterByDate()
                                                       .queryList();
-            Map<String, BigDecimal> productPriceMap = FastMap.newInstance();
+            Map<String, BigDecimal> productPriceMap = new HashMap<String, BigDecimal>();
             for (GenericValue productPrice : productPriceList) {
                 productPriceMap.put(productPrice.getString("productPriceTypeId"), productPrice.getBigDecimal("price"));
             }
@@ -5299,5 +5312,85 @@ public class ShoppingCart implements Iterable<ShoppingCartItem>, Serializable {
             emailList.addAll(addEmailList);
         }
         return emailList;
+    }
+    
+    // ================= Cart Subscriptions =================
+
+    /**
+     * SCIPIO: Retrieve all subscription of the entire cart
+     * 
+     * @return Map<GenericValue, List<GenericValue>>
+     * @throws GenericEntityException
+     */
+    public Map<String, List<GenericValue>> getItemSubscriptions() throws GenericEntityException {
+        List<ShoppingCartItem> cartItems = items();
+        if (cartItems != null) {
+            for (ShoppingCartItem cartItem : cartItems) {
+                List<GenericValue> productSubscriptions = getItemSubscriptions(cartItem.getDelegator(), cartItem.getProductId());
+                for (GenericValue productSubscription : productSubscriptions) {
+                    Debug.log("Found cartItem [" + cartItem.getOrderItemSeqId() + "#" + cartItem.getProductId() + "] with subscription id["
+                            + productSubscription.getString("subscriptionResourceId") + "]");
+                }
+            }
+            return this.cartSubscriptionItems;
+        }
+        return null;
+    }
+
+    /**
+     * SCIPIO: Retrieve all subscriptions associated to an productId
+     * 
+     * @return List<GenericValue>
+     * @throws GenericEntityException
+     */
+    public List<GenericValue> getItemSubscriptions(Delegator delegator, String productId) throws GenericEntityException {
+        if (this.cartSubscriptionItems == null)
+            this.cartSubscriptionItems = new HashMap<String, List<GenericValue>>();
+
+        List<GenericValue> productSubscriptionResources = EntityQuery.use(delegator).from("ProductSubscriptionResource").where("productId", productId)
+                .cache(true).filterByDate().queryList();
+        if (UtilValidate.isNotEmpty(productSubscriptionResources))
+            this.cartSubscriptionItems.put(productId, productSubscriptionResources);
+        return productSubscriptionResources;
+    }
+
+    /**
+     * SCIPIO: Checks if any order item has an underlying subscription/s bound
+     * to it
+     * 
+     * @return boolean
+     * @throws GenericEntityException
+     */
+    public boolean hasSubscriptions() {
+        return UtilValidate.isNotEmpty(this.cartSubscriptionItems);
+    }
+
+    /**
+     * SCIPIO: Checks if an order item has an underlying subscription/s bound to
+     * it
+     * 
+     * @return boolean
+     * @throws GenericEntityException
+     */
+    public boolean hasSubscriptions(GenericValue cartItem) {
+        return UtilValidate.isNotEmpty(this.cartSubscriptionItems) && this.cartSubscriptionItems.containsKey(cartItem);
+    }
+
+    /**
+     * SCIPIO: Check if the order contains only subscription items
+     * 
+     * @return boolean
+     */
+    public boolean orderContainsSubscriptionItemsOnly() {
+        List<ShoppingCartItem> cartItems = items();
+        if (cartItems != null && cartSubscriptionItems != null) {
+            for (ShoppingCartItem orderItem : cartItems) {
+                if (!cartSubscriptionItems.containsKey(orderItem))
+                    return false;
+            }
+        } else {
+            return false;
+        }
+        return true;
     }
 }
